update: working now at yolk.cc

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -12,7 +12,7 @@ head
   meta(charset="utf-8")
   meta(http-equiv="X-UA-Compatible", content="IE=edge")
   title = locals.article ? article.title + ' — ' : ''
-  title #{title} pancake
+  title #{title} – YOLK
   meta(name="description", content="pancake")
   meta(name="author", content="Joseph Chiocchi")
   meta(property="og:title", content="Y O L K")
