--- a/views/layout.jade
+++ b/views/layout.jade
@@ -11,8 +11,8 @@
 head
   meta(charset="utf-8")
   meta(http-equiv="X-UA-Compatible", content="IE=edge")
-  title = locals.article ? article.title + ' — ' : ''
-  title #{title} – YOLK
+  title = locals.work ? work.title + ' — ' : ''
+  title #{title} YOLK
   meta(name="description", content="pancake")
   meta(name="author", content="Joseph Chiocchi")
   meta(property="og:title", content="Y O L K")
