update build.js path

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -48,7 +48,7 @@ body
   script
     window.jQuery || document.write('<script src="/js/vendor/jquery-1.8.2.min.js"><\/script>')
 
-  script(src="build.js")
+  script(src="/build.js")
   script
     var icon = require('favicon');
     var canvas = document.createElement('canvas');
