link back to home on work page

--- a/views/work.jade
+++ b/views/work.jade
@@ -1,6 +1,6 @@
 .work
   h1
-    a.backhome(href="/works")
+    a.backhome(href="/")
       span.fontawesome-backward.backarrow
       span.title!=work.title
   strong
