add fontawesome cdn, update keywords on works

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -24,6 +24,7 @@ head
   meta(name="viewport", content="width=device-width")
   //- Place favicon.ico and apple-touch-icon.png in the root directory: mathiasbynens.be/notes/touch-icons
   link(rel="stylesheet", href="/css/style.css")
+  link(rel="stylesheet", href="//netdna.bootstrapcdn.com/font-awesome/3.1.1/css/font-awesome.css")
   //- More ideas for your <head> here: h5bp.com/d/head-Tips
   //-
   //- All JavaScript at the bottom, except this Modernizr build incl. Respond.js
