--- a/sass/style.scss
+++ b/sass/style.scss
@@ -74,7 +74,7 @@
 @import "h5bp/h5bp-css-print-after.inc";
 // ==|== End print-media ====================================================
 @import "compass/css3";
-@import url(http://weloveiconfonts.com/api/?family=fontawesome|zocial);
+@import url(http://weloveiconfonts.com/api/?family=fontawesome|zocial|brandico);
 
 /* fontawesome */
 [class*="fontawesome-"]:before {
@@ -105,6 +105,11 @@ header {
 /* zocial */
 [class*="zocial-"]:before {
   font-family: 'zocial', sans-serif;
+}
+
+/* brandico */
+[class*="brandico-"]:before{
+  font-family: 'brandico', sans-serif;
 }
 
 
