--- a/views/index.jade
+++ b/views/index.jade
@@ -27,6 +27,8 @@
                 span(class='fontawesome-screenshot', title='in real life')
               when 'response'
                 span(class='icon-mail-reply-all', title='response work')
+              when 'sound'
+                span(class='icon-music', title='sound')
               default
                 span
         date = work.date
