add relative assets

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -231,7 +231,7 @@ a.morelink {
 
 @include font-face("League Gothic", font-files("LeagueGothic-Italic-webfont.woff", "LeagueGothic-Italic-webfont.ttf", "LeagueGothic-Italic-webfont.svg"));
 
-//@include font-face("yolkyolk", font-files("fonts/yolkyolk-webfont.woff","fonts/yolkyolk-webfont.ttf", "fonts/yolkyolk-webfont.svg"));
+// @include font-face("yolkyolk", font-files("yolkyolk-webfont.woff","yolkyolk-webfont.ttf", "yolkyolk-webfont.svg"));
 
 // upcoming 
 
