add random switch function

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -59,6 +59,9 @@ body
     function rRGB(){
       return Math.floor(Math.random()*255);
     }
+    function rs(){
+      return Math.round(Math.random());
+    }
     ctx.fillStyle = 'rgb('+rRGB()+','+rRGB()+','+rRGB()+')';
 
     var nums = ["Y","O","L","K"];
