--- a/views/index.jade
+++ b/views/index.jade
@@ -10,27 +10,7 @@
         a(class='worklink', href="work/" + work.name + '/')= work.title
         div.keywords
           each keyword in work.keywords
-            case keyword
-              when 'video'
-                span(class='fontawesome-film', title='video')
-              when 'website'
-                span(class='fontawesome-bookmark', title='website')
-              when 'collab'
-                span(class='fontawesome-retweet', title='collaboration')
-              when 'code'
-                span(class='icon-code', title='code')
-              when 'experiment'
-                span(class='fontawesome-beaker', title='experiment')
-              when 'freelance'
-                span(class='fontawesome-money', title='freelance')
-              when 'irl'
-                span(class='fontawesome-screenshot', title='in real life')
-              when 'response'
-                span(class='icon-mail-reply-all', title='response work')
-              when 'sound'
-                span(class='icon-music', title='sound')
-              default
-                span
+            include keyword-symbols
         date = work.date
         span(title=strftime('%B %d, %Y %H:%M UTC', date), class="pdate")= strftime('%Y.%m.%d', date)
       | !{work.desc}
