--- a/views/work.jade
+++ b/views/work.jade
@@ -1,13 +1,3 @@
 .work
-  h1
-    a.backhome(href="/")
-      span.fontawesome-backward.backarrow
-      span.title!=work.title
-  strong
-    | Published: 
-    date = work.date
-    span(title=strftime('%B %d, %Y %H:%M UTC', date))= strftime('%Y.%m.%d', date)
-  div.keywords
-    each keyword in work.keywords
-      include keyword-symbols
+  include work-header
 .work!= work.html
