added og:image to public

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -17,7 +17,7 @@ head
   meta(name="author", content="Joseph Chiocchi")
   meta(property="og:title", content="Y O L K")
   meta(property="og:url", content="http://yolk.cc")
-  meta(property="og:image", content="http://i.imgur.com/iCbAJ.jpg")
+  meta(property="og:image", content="http://yolk.cc/meinjacket.jpg")
   meta(property="og:type", content="website")
   meta(property="og:description", content="YOLK : WORKS")
   //- Mobile viewport optimized: h5bp.com/viewport
