--- a/views/layout.jade
+++ b/views/layout.jade
@@ -16,8 +16,8 @@ head
   meta(name="description", content="pancake")
   meta(name="author", content="Joseph Chiocchi")
   meta(property="og:title", content="Y O L K")
-  meta(property="og:url", content="http://yolk.cc")
-  meta(property="og:image", content="http://yolk.cc/meinjacket.jpg")
+  meta(property="og:url", content="http://yo.yolk.cc")
+  meta(property="og:image", content="http://yo.yolk.cc/meinjacket.jpg")
   meta(property="og:type", content="website")
   meta(property="og:description", content="YOLK : WORKS")
   //- Mobile viewport optimized: h5bp.com/viewport
