--- a/views/layout.jade
+++ b/views/layout.jade
@@ -15,7 +15,7 @@ head
   title #{title} YOLK
   meta(name="description", content="pancake")
   meta(name="author", content="Joseph Chiocchi")
-  meta(property="og:title", content="Y O L K")
+  meta(property="og:title", content="YO YOLK!")
   meta(property="og:url", content="http://yo.yolk.cc")
   meta(property="og:image", content="http://yo.yolk.cc/meinjacket.jpg")
   meta(property="og:type", content="website")
