whoops, fix template

--- a/views/work-header.jade
+++ b/views/work-header.jade
@@ -8,7 +8,7 @@ strong
   span(title=strftime('%B %d, %Y %H:%M UTC', date))= strftime('%Y.%m.%d', date)
 if work.link
   h2 
-    a(href=#{work.link})
+    a(href=work.link)
       |#{work.title} 
       i(class="icon-external-link")
 div.keywords
