--- a/views/layout.jade
+++ b/views/layout.jade
@@ -40,6 +40,7 @@ body
     include nav
   div(role="main")
     !{body}
+    canvas(id="outline", width="100", height="200", style="position:fixed;top:20px;right:10px;")
   footer
     div(class='zocial-html5')
   //- JavaScript at the bottom for fast page loading
@@ -50,6 +51,8 @@ body
     window.jQuery || document.write('<script src="/js/vendor/jquery-1.8.2.min.js"><\/script>')
 
   script(src="/build.js")
+  script(src="/jquery.fracs-0.11.min.js")
+  script(src="/jquery.outline-0.11.min.js")
   script
     var icon = require('favicon');
     var canvas = document.createElement('canvas');
@@ -75,14 +78,30 @@ body
       ctx.fillText(n, 0, 15);
       icon(canvas.toDataURL());
     }, 300);
-  //-
-    script
-      function hideIntro(){
-        document.getElementById("pageintro").className += "slideUp";
-      }
-  //-script(src="//ajax.googleapis.com/ajax/libs/mootools/1.4.5/mootools-yui-compressed.js")
-//-  script
-//-  document.id || document.write('<script src=\"js/libs/mootools-core-1.4.5-full-nocompat-yc.js\"><\\/script>')
+  script
+    $("#outline").fracs("outline", {
+      crop: true,
+      styles: [{
+          selector: 'header,footer,section,article',
+          fillStyle: 'rgb(230,230,230)'
+        }, {
+          selector: 'h1',
+          fillStyle: 'rgb(240,140,060)'
+        }, {
+          selector: 'div[role="main"] p a, h2 a',
+          fillStyle: 'rgb(0,0,255)'
+        }, {
+          selector: '.work a',
+          fillStyle: 'blue'
+        }, {
+          selector: '.yolk a',
+          fillStyle: 'black'
+        }, {
+          selector: 'iframe',
+          fillStyle: 'rgba(255, 236, 13, 0.5)'
+        }
+      ]
+    });
   //script(src="js/plugins.js")
   //script(src="js/script.js")
   //- Asynchronous Google Analytics snippet. Change UA-XXXXX-X to be your site's ID.
