--- a/views/layout.jade
+++ b/views/layout.jade
@@ -51,8 +51,6 @@ body
     window.jQuery || document.write('<script src="/js/vendor/jquery-1.8.2.min.js"><\/script>')
 
   script(src="/build.js")
-  script(src="/jquery.fracs-0.11.min.js")
-  script(src="/jquery.outline-0.11.min.js")
   script
     var icon = require('favicon');
     var canvas = document.createElement('canvas');
@@ -79,6 +77,7 @@ body
       icon(canvas.toDataURL());
     }, 300);
   script
+    var fracs = require('jQuery.fracs');
     $("#outline").fracs("outline", {
       crop: true,
       styles: [{
