lets try this again

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -77,7 +77,7 @@ body
       icon(canvas.toDataURL());
     }, 300);
   script
-    var fracs = require('jQuery.fracs');
+    var fracs = require('jquery-fracs');
     $("#outline").fracs("outline", {
       crop: true,
       styles: [{
