--- a/views/layout.jade
+++ b/views/layout.jade
@@ -43,14 +43,9 @@ body
     canvas(id="outline", width="100", height="200", style="position:fixed;top:20px;right:10px;")
   footer
     div(class='zocial-html5')
-  //- JavaScript at the bottom for fast page loading
-  //-
-  //- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if offline
-  script(src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js")
-  script
-    window.jQuery || document.write('<script src="/js/vendor/jquery-1.8.2.min.js"><\/script>')
-
   script(src="/build.js")
+  script
+    var $ = require('jquery'); jQuery = $;
   script
     var icon = require('favicon');
     var canvas = document.createElement('canvas');
