--- a/views/layout.jade
+++ b/views/layout.jade
@@ -96,6 +96,9 @@ body
         }, {
           selector: 'iframe',
           fillStyle: 'rgba(255, 236, 13, 0.5)'
+        }, {
+          selector: 'img',
+          fillStyle: 'rgba(240, 230, 240, 0.4)'
         }
       ]
     });
