--- a/views/keyword-symbols.jade
+++ b/views/keyword-symbols.jade
@@ -17,5 +17,7 @@ case keyword
     span(class='icon-mail-reply-all', title='response work')
   when 'sound'
     span(class='icon-music', title='sound')
+  when 'hardware'
+    span(class='icon-cogs', title='hardware')
   default
     span
