change header font

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -156,6 +156,8 @@ a.worklink, a.articlelink, a.morelink{
 
 .yolk {
   margin-left:-10px;
+  font-family: "League Gothic";
+  font-size: 2em;
 }
 .yolk a{
   margin:10px;
