--- a/public/css/style.css
+++ b/public/css/style.css
@@ -955,49 +955,51 @@ a.worklink:hover, a.articlelink:hover, a.morelink:hover {
 /* line 157, ../../sass/style.scss */
 .yolk {
   margin-left: -10px;
+  font-family: "League Gothic";
+  font-size: 2em;
 }
 
-/* line 160, ../../sass/style.scss */
+/* line 162, ../../sass/style.scss */
 .yolk a {
   margin: 10px;
   padding: 20px;
   color: black;
 }
-/* line 164, ../../sass/style.scss */
+/* line 166, ../../sass/style.scss */
 .yolk a:hover {
   background-color: black;
   color: white;
 }
-/* line 167, ../../sass/style.scss */
+/* line 169, ../../sass/style.scss */
 .yolk a:hover:active {
   color: white;
   background-color: black;
 }
 
-/* line 176, ../../sass/style.scss */
+/* line 178, ../../sass/style.scss */
 a.morelink:hover {
   color: white;
   background-color: blue;
 }
-/* line 178, ../../sass/style.scss */
+/* line 180, ../../sass/style.scss */
 a.morelink:hover:visited {
   color: white;
 }
-/* line 182, ../../sass/style.scss */
+/* line 184, ../../sass/style.scss */
 a.morelink:hover:active {
   background-color: white;
 }
 
-/* line 198, ../../sass/style.scss */
+/* line 200, ../../sass/style.scss */
 .work span.pdate, .article span.pdate {
   float: right;
 }
-/* line 200, ../../sass/style.scss */
+/* line 202, ../../sass/style.scss */
 .work a.backhome, .article a.backhome {
   margin-left: -36px;
   color: black;
 }
-/* line 203, ../../sass/style.scss */
+/* line 205, ../../sass/style.scss */
 .work a.backhome span.backarrow, .article a.backhome span.backarrow {
   display: -moz-inline-stack;
   display: inline-block;
@@ -1008,41 +1010,41 @@ a.morelink:hover:active {
   position: relative;
   visibility: hidden;
 }
-/* line 208, ../../sass/style.scss */
+/* line 210, ../../sass/style.scss */
 .work a.backhome:hover span.backarrow, .article a.backhome:hover span.backarrow {
   visibility: visible;
 }
-/* line 212, ../../sass/style.scss */
+/* line 214, ../../sass/style.scss */
 .work a.backhome:active span.backarrow, .article a.backhome:active span.backarrow {
   color: black;
 }
-/* line 215, ../../sass/style.scss */
+/* line 217, ../../sass/style.scss */
 .work a.backhome:active span.title, .article a.backhome:active span.title {
   color: blue;
 }
-/* line 220, ../../sass/style.scss */
+/* line 222, ../../sass/style.scss */
 .work p, .article p {
   clear: left;
 }
-/* line 221, ../../sass/style.scss */
+/* line 223, ../../sass/style.scss */
 .work img, .article img {
   width: 100%;
 }
-/* line 222, ../../sass/style.scss */
+/* line 224, ../../sass/style.scss */
 .work iframe, .article iframe {
   width: 100%;
 }
 
-/* line 224, ../../sass/style.scss */
+/* line 226, ../../sass/style.scss */
 .clear {
   clear: both;
 }
 
-/* line 225, ../../sass/style.scss */
+/* line 227, ../../sass/style.scss */
 a.morelink {
   clear: both;
 }
-/* line 226, ../../sass/style.scss */
+/* line 228, ../../sass/style.scss */
 a.morelink:visited {
   color: #0000cc;
 }
@@ -1053,13 +1055,13 @@ a.morelink:visited {
 }
 
 @-moz-keyframes upcomingHue {
-  /* line 239, ../../sass/style.scss */
+  /* line 241, ../../sass/style.scss */
   0%, 100% {
     color: LemonChiffon;
     background-color: Crimson;
   }
 
-  /* line 243, ../../sass/style.scss */
+  /* line 245, ../../sass/style.scss */
   50% {
     color: Crimson;
     background-color: LemonChiffon;
@@ -1067,13 +1069,13 @@ a.morelink:visited {
 }
 
 @-webkit-keyframes upcomingHue {
-  /* line 239, ../../sass/style.scss */
+  /* line 241, ../../sass/style.scss */
   0%, 100% {
     color: LemonChiffon;
     background-color: Crimson;
   }
 
-  /* line 243, ../../sass/style.scss */
+  /* line 245, ../../sass/style.scss */
   50% {
     color: Crimson;
     background-color: LemonChiffon;
@@ -1081,13 +1083,13 @@ a.morelink:visited {
 }
 
 @-o-keyframes upcomingHue {
-  /* line 239, ../../sass/style.scss */
+  /* line 241, ../../sass/style.scss */
   0%, 100% {
     color: LemonChiffon;
     background-color: Crimson;
   }
 
-  /* line 243, ../../sass/style.scss */
+  /* line 245, ../../sass/style.scss */
   50% {
     color: Crimson;
     background-color: LemonChiffon;
@@ -1095,13 +1097,13 @@ a.morelink:visited {
 }
 
 @-ms-keyframes upcomingHue {
-  /* line 239, ../../sass/style.scss */
+  /* line 241, ../../sass/style.scss */
   0%, 100% {
     color: LemonChiffon;
     background-color: Crimson;
   }
 
-  /* line 243, ../../sass/style.scss */
+  /* line 245, ../../sass/style.scss */
   50% {
     color: Crimson;
     background-color: LemonChiffon;
@@ -1109,13 +1111,13 @@ a.morelink:visited {
 }
 
 @keyframes upcomingHue {
-  /* line 239, ../../sass/style.scss */
+  /* line 241, ../../sass/style.scss */
   0%, 100% {
     color: LemonChiffon;
     background-color: Crimson;
   }
 
-  /* line 243, ../../sass/style.scss */
+  /* line 245, ../../sass/style.scss */
   50% {
     color: Crimson;
     background-color: LemonChiffon;
@@ -1123,13 +1125,13 @@ a.morelink:visited {
 }
 
 @-moz-keyframes raiseLower {
-  /* line 250, ../../sass/style.scss */
+  /* line 252, ../../sass/style.scss */
   0%, 100% {
     -moz-box-shadow: 0 15px 10px -10px rgba(0, 0, 0, 0.5), 0 1px 4px rgba(0, 0, 0, 0.3);
     box-shadow: 0 15px 10px -10px rgba(0, 0, 0, 0.5), 0 1px 4px rgba(0, 0, 0, 0.3);
   }
 
-  /* line 253, ../../sass/style.scss */
+  /* line 255, ../../sass/style.scss */
   50% {
     -moz-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2), inset 0 5px 5px rgba(0, 0, 0, 0.6), inset 0 1px 5px rgba(0, 0, 0, 0.6);
     box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2), inset 0 5px 5px rgba(0, 0, 0, 0.6), inset 0 1px 5px rgba(0, 0, 0, 0.6);
@@ -1137,13 +1139,13 @@ a.morelink:visited {
 }
 
 @-webkit-keyframes raiseLower {
-  /* line 250, ../../sass/style.scss */
+  /* line 252, ../../sass/style.scss */
   0%, 100% {
     -webkit-box-shadow: 0 15px 10px -10px rgba(0, 0, 0, 0.5), 0 1px 4px rgba(0, 0, 0, 0.3);
     box-shadow: 0 15px 10px -10px rgba(0, 0, 0, 0.5), 0 1px 4px rgba(0, 0, 0, 0.3);
   }
 
-  /* line 253, ../../sass/style.scss */
+  /* line 255, ../../sass/style.scss */
   50% {
     -webkit-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2), inset 0 5px 5px rgba(0, 0, 0, 0.6), inset 0 1px 5px rgba(0, 0, 0, 0.6);
     box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2), inset 0 5px 5px rgba(0, 0, 0, 0.6), inset 0 1px 5px rgba(0, 0, 0, 0.6);
@@ -1151,42 +1153,42 @@ a.morelink:visited {
 }
 
 @-o-keyframes raiseLower {
-  /* line 250, ../../sass/style.scss */
+  /* line 252, ../../sass/style.scss */
   0%, 100% {
     box-shadow: 0 15px 10px -10px rgba(0, 0, 0, 0.5), 0 1px 4px rgba(0, 0, 0, 0.3);
   }
 
-  /* line 253, ../../sass/style.scss */
+  /* line 255, ../../sass/style.scss */
   50% {
     box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2), inset 0 5px 5px rgba(0, 0, 0, 0.6), inset 0 1px 5px rgba(0, 0, 0, 0.6);
   }
 }
 
 @-ms-keyframes raiseLower {
-  /* line 250, ../../sass/style.scss */
+  /* line 252, ../../sass/style.scss */
   0%, 100% {
     box-shadow: 0 15px 10px -10px rgba(0, 0, 0, 0.5), 0 1px 4px rgba(0, 0, 0, 0.3);
   }
 
-  /* line 253, ../../sass/style.scss */
+  /* line 255, ../../sass/style.scss */
   50% {
     box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2), inset 0 5px 5px rgba(0, 0, 0, 0.6), inset 0 1px 5px rgba(0, 0, 0, 0.6);
   }
 }
 
 @keyframes raiseLower {
-  /* line 250, ../../sass/style.scss */
+  /* line 252, ../../sass/style.scss */
   0%, 100% {
     box-shadow: 0 15px 10px -10px rgba(0, 0, 0, 0.5), 0 1px 4px rgba(0, 0, 0, 0.3);
   }
 
-  /* line 253, ../../sass/style.scss */
+  /* line 255, ../../sass/style.scss */
   50% {
     box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2), inset 0 5px 5px rgba(0, 0, 0, 0.6), inset 0 1px 5px rgba(0, 0, 0, 0.6);
   }
 }
 
-/* line 257, ../../sass/style.scss */
+/* line 259, ../../sass/style.scss */
 .upcoming h3, h3.upcoming {
   -webkit-animation: upcomingHue 3s infinite;
   -moz-animation: upcomingHue 3s infinite;
@@ -1207,7 +1209,7 @@ a.morelink:visited {
   padding: 10px;
 }
 
-/* line 263, ../../sass/style.scss */
+/* line 265, ../../sass/style.scss */
 .upcoming {
   position: relative;
   background-color: #fff;
@@ -1285,7 +1287,7 @@ a.morelink:visited {
   }
 }
 
-/* line 273, ../../sass/style.scss */
+/* line 275, ../../sass/style.scss */
 footer {
   margin-top: 20px;
   text-align: center;
@@ -1330,12 +1332,12 @@ footer {
   top: -110% !important;
 }
 
-/* line 282, ../../sass/style.scss */
+/* line 284, ../../sass/style.scss */
 .keywords {
   margin-top: 3px;
 }
 
-/* line 285, ../../sass/style.scss */
+/* line 287, ../../sass/style.scss */
 .keywords span {
   margin-right: 4px;
 }
