filter working, tips not

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1346,3 +1346,29 @@ footer {
 .keywords span {
   margin-right: 4px;
 }
+
+/* line 294, ../../sass/style.scss */
+#keywordFilter {
+  margin-top: 20px;
+}
+/* line 296, ../../sass/style.scss */
+#keywordFilter a {
+  font-size: 120%;
+  margin-right: 8px;
+}
+
+/* line 306, ../../sass/style.scss */
+ul {
+  list-style: none;
+}
+/* line 11, ../../../../../.rbenv/versions/2.0.0-rc2/lib/ruby/gems/2.0.0/gems/compass-0.13.alpha.4/frameworks/compass/stylesheets/compass/typography/lists/_bullets.scss */
+ul li {
+  list-style-image: none;
+  list-style-type: none;
+  margin-left: 0;
+}
+
+/* line 309, ../../sass/style.scss */
+.hide {
+  display: none;
+}
