--- a/views/keyword-filters.jade
+++ b/views/keyword-filters.jade
@@ -4,7 +4,7 @@ case keyword
   when 'website'
     a(class='fontawesome-bookmark', title='website', id="filter#{keyword}")
   when 'collab'
-    a(class='fontawesome-retweet', title='collaboration', id="filter#{keyword}")
+    a(class='fontawesome-retweet', title='collab', id="filter#{keyword}")
   when 'code'
     a(class='icon-code', title='code', id="filter#{keyword}")
   when 'experiment'
@@ -12,9 +12,9 @@ case keyword
   when 'freelance'
     a(class='fontawesome-money', title='freelance', id="filter#{keyword}")
   when 'irl'
-    a(class='fontawesome-screenshot', title='in real life', id="filter#{keyword}")
+    a(class='fontawesome-screenshot', title='irl', id="filter#{keyword}")
   when 'response'
-    a(class='icon-mail-reply-all', title='response work', id="filter#{keyword}")
+    a(class='icon-mail-reply-all', title='response', id="filter#{keyword}")
   when 'sound'
     a(class='icon-music', title='sound', id="filter#{keyword}")
   when 'hardware'
