--- a/sass/style.scss
+++ b/sass/style.scss
@@ -87,8 +87,10 @@ body { padding: 40px; }
 @import "recipes/shadow/drop";
 @import "recipes/effect/cutout";
 
-@import "animate";
+// @import "animate";
+
 @import "animation";
+@import "animation/animate";
 
 header { 
   .nav a{
@@ -142,7 +144,7 @@ a {
     &{
       @include drop-shadow-raised;
       @include transition-duration(.4s);
-      @include animate-bounceIn;
+      // @include animate-bounceIn;
     }
   }
 }
@@ -150,7 +152,7 @@ a.worklink, a.articlelink, a.morelink{
   &:hover{
     @include cutout;
     @include transition-duration(.4s);
-    @include animate-bounceIn;
+    // @include animate-bounceIn;
   }
 }
 
@@ -302,11 +304,13 @@ footer{
 
 // filtering
 
-@import "compass/utilities/lists/bullets";
+@import "compass/typography/lists/bullets";
 
 ul{
   @include no-bullets;
+  padding:0;
 }
+// @include animate-fadeOut;
 .hide{
-  display: none;
+  display:none;
 }
