--- a/views/index.jade
+++ b/views/index.jade
@@ -10,14 +10,15 @@
       include keyword-filters
   ul
     each work in works
-      li(class=work.keywords)
-        .work
-            h4
-              a(class='worklink', href="work/" + work.name + '/')= work.title
-              div.keywords
-                each keyword in work.keywords
-                  include keyword-symbols
-              date = work.date
-              span(title=strftime('%B %d, %Y %H:%M UTC', date), class="pdate")= strftime('%Y.%m.%d', date)
-            | !{work.desc}
-      hr(class='clear')
+      if (work.published == true)
+        li(class=work.keywords)
+          .work
+              h4
+                a(class='worklink', href="work/" + work.name + '/')= work.title
+                div.keywords
+                  each keyword in work.keywords
+                    include keyword-symbols
+                date = work.date
+                span(title=strftime('%B %d, %Y %H:%M UTC', date), class="pdate")= strftime('%Y.%m.%d', date)
+              | !{work.desc}
+        hr(class='clear')
