--- a/views/works.jade
+++ b/views/works.jade
@@ -1,10 +1,20 @@
 .works
-  h3 all works
-  each work in works
-    .work
-      h4
-        a(class='worklink', href='/work/'+work.name)= work.title
-        date = work.date
-        span(title=strftime('%B %d, %Y %H:%M UTC', date), class="pdate")= strftime('%Y.%m.%d', date)
-      | !{work.desc}
-
+  h3 works
+  #keywordFilter
+    - var keywords = ["video", "website", "collab", "code", "experiment", "freelance", "irl", "response", "sound", "hardware"]
+    each keyword in keywords
+      include keyword-filters
+  ul
+    each work in works
+      if (work.published == true)
+        li(class=work.keywords)
+          .work
+              h4
+                a(class='worklink', href="work/" + work.name + '/')= work.title
+                div.keywords
+                  each keyword in work.keywords
+                    include keyword-symbols
+                date = work.date
+                span(title=strftime('%B %d, %Y %H:%M UTC', date), class="pdate")= strftime('%Y.%m.%d', date)
+              | !{work.desc}
+        hr(class='clear')
