--- a/views/nav.jade
+++ b/views/nav.jade
@@ -15,3 +15,4 @@ div(class='social')
   a(href='https://vimeo.com/yyolk', class='zocial-vimeo')
   a(href='https://github.com/yyolk', class='brandico-github')
   a(href='https://chrome.google.com/webstore/search/yolk', class='zocial-chrome')
+  a(href='https://alpha.app.net/yolk', class='zocial-appnet')
