--- a/views/nav.jade
+++ b/views/nav.jade
@@ -1,4 +1,5 @@
 div(class='nav')
+  // featured works?
   a(href="/work/patterns-are-my-feelings") patternsaremyfeelings
   a(href="/work/my-thoughts-are-yours") mythoughtsareyours
   a(href="/work/yolkalyzer") yolkalyzer
