--- a/views/index.jade
+++ b/views/index.jade
@@ -1,3 +1,7 @@
+.upcoming
+  h3.upcoming 
+    a(href='http://yolk.yolk.cc/post/64891824296/call-for-work') BEYOND RESOLUTION OPEN CALL
+
 #doyouliek
   a(href="https://www.facebook.com/groups/glitchglitch") U LIEK GLITCH?
 
