better upcoming box

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,5 @@
 .upcoming
-  h3.upcoming 
+  h3 upcoming 
     a(href='http://yolk.yolk.cc/post/64891824296/call-for-work') BEYOND RESOLUTION OPEN CALL
 
 #doyouliek
